cmake_minimum_required(VERSION 3.17)
project(C___Programs)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___Programs
        Binary_search_by_me.cpp
        binary_tree_by_me.cpp
        BST-All.cpp
        "circular_linklist_by _me.cpp"
        circular_queue_linklist_by_me.cpp
        doubly_circular_linklist_by_me.cpp
        doubly_linkist_by_me.cpp
        "Expression Evaluation.cpp"
        Linear_Search_by_me.cpp
        linklist1.cpp
        linklist2.cpp
        linklist3.cpp
        linklist4.cpp
        linklist5.cpp
        linklist6.cpp
        Project.cpp
        que1.cpp
        que2.cpp
        queue1.cpp
        queue2.cpp
        queue3.cpp
        queue_array_by_me.cpp
        queue_linklist_by_me.cpp
        queue_stacks_by_me.cpp
        Recursion.cpp
        reverse_doubly_linklist_by_me.cpp
        reverse_singly_linklist_by_me.cpp
        singly_linklist_by_me.cpp
        stacks_array_by_me.cpp
        stacks_array_by_sir.cpp
        stacks_linklist_by_me.cpp
        stacks_linklist_by_sir.cpp
        tempCodeRunnerFile.cpp)
